--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
 <section>
     <p class="text">
-        Hello and welcome to my gallery website, I used HTML to construct the basic structure of the web page, CSS to beautify the style and layout, and Javascript language for interactive purposes in the design process. It includes a rotating group of pictures, a rotating cuboid with illustrations, a hollowed-out snowy mountain background with my name on it, and my art process for drawing the puppy. If you mouse over this text, you'll see the text fly away like smoke and reset after two seconds. Hope you like it :)
+        Hello and welcome to my gallery website, I used HTML to construct the basic structure of the web page, CSS to beautify the style and layout, and Javascript language for interactive purposes in the design process. It includes a carousel group of pictures, a rotating cuboid with illustrations, a hollowed-out snowy mountain background with my name on it, and my art process for drawing the puppy. If you mouse over this text, you'll see the text fly away like smoke and reset after two seconds. Hope you like it :)
 
     </p>
 </section>
