--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="This site is developed by Ziqi Wang">
     <meta name="author" content="email:wangziqi0515@gmail.com">
     <meta name="<viewport>" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style-.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./fa/css/all.css"/>
     <script src="./main.js"></script>
     <title>Ziqi's Art Gallery</title>
